media text block fix, media library improvements, page templates, responsive preview
